# circle-detection

./: .gitignore  CMakeLists.txt  Programing Skill Check _LINKWIZ.pptx  README.md
data/: Hole_Detection_Test_Data.txt
lib/: convertFile.cpp  findCircles.cpp  findConcaveHull.cpp  shiftCentreToCentroid.cpp
